# Skill-Runner

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  README_CN.md  README_FR.md  README_JA.md  docker-compose.release.tmpl.yml  docker-compose.yml  pyproject.toml
.github/: secret_scanning.yml
agent_harness/: __init__.py  cli.py  config.py  errors.py  runtime.py  skill_injection.py  storage.py
artifacts/: agent_output_schema_enforcement_upgrade_plan_2026-04-11.md  codebuddy_engine_integration_plan_2026-07-10.md  codebuddy_engine_investigation_2026-07-10.md  codebuddy_stdout_sample-1.jsonl  codebuddy_stdout_sample-2.attempt-1.jsonl  codebuddy_stdout_sample-2.attempt-4.jsonl  comprehensive_review_20260301T004615.md  frontend_upgrade_guide_2026-04-16_15-55-13.md  golden_fixture_runs.md  in_conversation_auth_breakpoint_20260303.md  inject-preview.md  interactive-00-api-mode-and-interaction-contract.md  interactive-01-skill-execution-mode-declaration-and-gating.md  interactive-10-orchestrator-waiting-user-and-slot-release.md  interactive-20-adapter-turn-protocol-and-mode-aware-patching.md  interactive-26-job-termination-api-and-frontend-control.md  interactive-27-unified-management-api-surface.md  interactive-28-web-client-management-api-migration.md  interactive-31-run-restart-recovery-and-orphan-reconciliation.md  kilo_code_stdout_sample-1.jsonl  kilo_code_stdout_sample-2.attempt-3.jsonl  release_note_v0.4.0.md  release_note_v0.5.0.md  round-all-changes-detailed-2026-02-16.md  todo_memo.md  ui_style_rebuild_prompt.md  unit_test_audit_report.md  utcnow_deprecation_fix_report.md
docs/: adapter_design.md  api_reference.md  architecture_overview.md  auth_required_detection_evidence_20260302.md  autoskill_package_guide.md  codebuddy_engine_release_gate.md  containerization.md  core_components.md  dev_guide.md  e2e_example_client_ui_reference.md  execution_flow.md  file_protocol.md  (+17 more)
(+3020 files in other folders)
