[project]
name = "skill-runner"
version = "0.1.0"
description = "Agent Skill Runner"
authors = [
    {name = "Joshua Reed", email = "leike0813@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "jsonschema",
    "tomlkit",
    "yacs>=0.1.8",
]
requires-python = ">=3.11"
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx",
    "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["data*", "skills*", "tests*", "references*"]

[tool.pytest.ini_options]
markers = [
    "e2e: REST-level end-to-end tests",
]
